--- a/bot/locales/pl.json
+++ b/bot/locales/pl.json
@@ -15,6 +15,7 @@
         "success_match_loaded": "Mecz zostal pomyslnie zaladowany.",
         "embed_match_title": "Mecz został utworzony.",
         "embed_match_desc": "Mecz został utworzony.\n \n ID MECZU: {} \n \n TYP MECZU: {}",
+        "maps": "Mapy",
         "error_user_is_not_in_voice_channel": "Nie jestes na kanale glosowym.",
         "error_min_members_count": "Potrzebujesz przynajmniej {} osób na kanale glosowym, aby utworzyc mecz.",
         "error_user_is_not_in_match": "Nie jestes w meczu.",
